# gdrive-utils

./: .gitignore  404.html  AGENTS.md  README.md  index.html  mkdocs.yml  objects.inv  organizar.py  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
api/: index.html
api/auth/: index.html
api/compat/: index.html
api/config/: index.html
api/core/: index.html
api/exceptions/: index.html
api/files/: index.html
api/sheets/: index.html
changelog/: index.html
configuration/: index.html
contributing/: index.html
docs/: api.md  changelog.md  configuration.md  contributing.md  index.md  installation.md  quickstart.md
docs/api/: auth.md  compat.md  config.md  core.md  exceptions.md  files.md  sheets.md
installation/: index.html
quickstart/: index.html
scripts/: test_integration.py
search/: search_index.json
src/gdrive_utils/: __init__.py  auth.py  compat.py  config.py  core.py  exceptions.py  files.py  reader.py  sheets.py
tests/: conftest.py  test_auth.py  test_compat.py  test_config.py  test_core.py  test_exceptions.py  test_files.py  test_sheets.py
