[project]
name = "gdrive-utils"
version = "0.1.0"
description = "Utility library for Google Drive/Sheets operations and file renaming workflows"
readme = "README.md"
authors = [
    { name = "Ernesto Palacios", email = "vlad@xps-9510.com" }
]
requires-python = ">=3.10"
dependencies = [
    "gspread>=6.0.0",
    "google-auth>=2.0.0",
    "pandas>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.25.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gdrive_utils"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4", "SIM"]
ignore = ["D104", "D107", "D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D100", "D101", "D102", "D103"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=gdrive_utils --cov-report=term-missing"
